# ton-client-dotnet-demo

managed/: Interop.cs  Program.cs  test-client.csproj  test-client.sln
native/: CMakeLists.txt
native/include/: test.h
native/src/: CMakeLists.txt  test.c
native/test/: CMakeLists.txt  test.c
